<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomepageActivity"
    android:background="@color/appBackground"
    android:theme="@style/AppTheme">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/nav_login"
            android:layout_width="297dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:fontFamily="sans-serif"
            android:text="@string/login"
            android:textColor="@color/buttonText"
            android:textSize="32sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.805" />

        <Button
            android:id="@+id/nav_guidelines"
            android:layout_width="297dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:fontFamily="sans-serif"
            android:text="@string/guidelines"
            android:textColor="@color/buttonText"
            android:textSize="32sp"
            android:typeface="serif"
            app:layout_constraintBottom_toTopOf="@+id/nav_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_cases"
            app:layout_constraintVertical_bias="0.50" />

        <Button
            android:id="@+id/nav_cases"
            android:layout_width="297dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:fontFamily="sans-serif"
            android:text="@string/cases"
            android:textColor="@color/buttonText"
            android:textSize="32sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.204" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="412dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@color/bannerColor" />

        <TextView
            android:id="@+id/text_app_name"
            android:layout_width="374dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textColor="@color/bannerText"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>